--- a/src/Capgemini.PowerApps.PackageDeployerTemplate/Capgemini.PowerApps.PackageDeployerTemplate.csproj
+++ b/src/Capgemini.PowerApps.PackageDeployerTemplate/Capgemini.PowerApps.PackageDeployerTemplate.csproj
@@ -180,9 +180,10 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Adapters\CrmServiceAdapter.cs" />
     <Compile Include="PackageTemplateBase.cs" />
     <Compile Include="Services\DataImporterService.cs" />
-    <Compile Include="Services\LoggerAdapter.cs" />
+    <Compile Include="Adapters\LoggerAdapter.cs" />
     <Compile Include="Services\ProcessActivatorService.cs" />
     <Compile Include="Services\SdkStepsActivatorService.cs" />
     <Compile Include="Services\SlaActivatorService.cs" />
@@ -190,7 +191,6 @@
     <Compile Include="WordTemplateUtilities.cs" />
     <Compile Include="ZipFileUtilities.cs" />
     <Compile Include="Config\DataImportConfig.cs" />
-    <Compile Include="Extensions\CrmServiceClientExtensions.cs" />
     <Compile Include="Extensions\TraceLoggerExtensions.cs" />
     <Compile Include="Config\ConfigDataStorage.cs" />
   </ItemGroup>
