--- a/tests/Capgemini.PowerApps.PackageDeployerTemplate.UnitTests/Capgemini.PowerApps.PackageDeployerTemplate.UnitTests.csproj
+++ b/tests/Capgemini.PowerApps.PackageDeployerTemplate.UnitTests/Capgemini.PowerApps.PackageDeployerTemplate.UnitTests.csproj
@@ -163,6 +163,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataImporterServiceTests.cs" />
     <Compile Include="Services\ProcessActivatorServiceTests.cs" />
+    <Compile Include="Services\SdkStepsActivatorServiceTests.cs" />
+    <Compile Include="Services\SlaActivatorServiceTests.cs" />
+    <Compile Include="Services\WordTemplateImporterServiceTests.cs" />
     <Compile Include="ZipFileUtilitiesTests.cs" />
     <Compile Include="TestUtilities.cs" />
   </ItemGroup>
