--- a/src/Capgemini.PowerApps.PackageDeployerTemplate/Capgemini.PowerApps.PackageDeployerTemplate.csproj
+++ b/src/Capgemini.PowerApps.PackageDeployerTemplate/Capgemini.PowerApps.PackageDeployerTemplate.csproj
@@ -215,9 +215,9 @@
     <Compile Include="PackageTemplateBase.cs" />
     <Compile Include="Services\DataImporterService.cs" />
     <Compile Include="Adapters\DataMigratorLoggerAdapter.cs" />
-    <Compile Include="Services\ProcessActivatorService.cs" />
-    <Compile Include="Services\SdkStepsActivatorService.cs" />
-    <Compile Include="Services\SlaActivatorService.cs" />
+    <Compile Include="Services\ProcessDeploymentService.cs" />
+    <Compile Include="Services\SdkStepDeploymentService.cs" />
+    <Compile Include="Services\SlaDeploymentService.cs" />
     <Compile Include="Services\WordTemplateImporterService.cs" />
     <Compile Include="WordTemplateUtilities.cs" />
     <Compile Include="ZipFileUtilities.cs" />
