Added boiler plate from Dev hub ready for any refactoring required.

--- a/tests/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage.csproj
+++ b/tests/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage.csproj
@@ -247,6 +247,7 @@
     <Content Include="PkgFolder\Capgemini Data Migrator\Pre-deploy\Data\predeploy_subject_1.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="PkgFolder\cap_PackageDeployerTemplate_IntegrationTest_Flows_1_0_0_0_managed.zip" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Capgemini.PowerApps.PackageDeployerTemplate\Capgemini.PowerApps.PackageDeployerTemplate.csproj">
