--- a/tests/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage.csproj
+++ b/tests/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage/Capgemini.PowerApps.PackageDeployerTemplate.TestPackage.csproj
@@ -247,9 +247,9 @@
     <Content Include="PkgFolder\Capgemini Data Migrator\Pre-deploy\Data\predeploy_subject_1.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <None Include="PkgFolder\cap_PackageDeployerTemplate_IntegrationTest_Flows_1_0_0_0_managed.zip">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Content Include="PkgFolder\cap_PackageDeployerTemplate_IntegrationTest_Flows_1_0_0_0_managed.zip">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Capgemini.PowerApps.PackageDeployerTemplate\Capgemini.PowerApps.PackageDeployerTemplate.csproj">
