Created Constants to avoid repetition. Removed Old Config as I realised they are not required until we work on sharing flow connections in the near future.

--- a/src/Capgemini.PowerApps.PackageDeployerTemplate/Capgemini.PowerApps.PackageDeployerTemplate.csproj
+++ b/src/Capgemini.PowerApps.PackageDeployerTemplate/Capgemini.PowerApps.PackageDeployerTemplate.csproj
@@ -212,8 +212,6 @@
     <Compile Include="Adapters\CrmServiceAdapter.cs" />
     <Compile Include="Adapters\ICrmServiceAdapter.cs" />
     <Compile Include="Adapters\TraceLoggerAdapter.cs" />
-    <Compile Include="Config\ConnectionReference.cs" />
-    <Compile Include="Config\FlowConnection.cs" />
     <Compile Include="PackageTemplateBase.cs" />
     <Compile Include="Services\DataImporterService.cs" />
     <Compile Include="Adapters\DataMigratorLoggerAdapter.cs" />
@@ -222,6 +220,7 @@
     <Compile Include="Services\SdkStepDeploymentService.cs" />
     <Compile Include="Services\SlaDeploymentService.cs" />
     <Compile Include="Services\WordTemplateImporterService.cs" />
+    <Compile Include="Constants.cs" />
     <Compile Include="WordTemplateUtilities.cs" />
     <Compile Include="ZipFileUtilities.cs" />
     <Compile Include="Config\DataImportConfig.cs" />
