refactor: include solution source in package
This commit also removes some of the dependencies that the old test package had on Dynamics 365 modules (i.e. case entity)

--- a/tests/Capgemini.PowerApps.PackageDeployerTemplate.MockPackage/Capgemini.PowerApps.PackageDeployerTemplate.MockPackage.csproj
+++ b/tests/Capgemini.PowerApps.PackageDeployerTemplate.MockPackage/Capgemini.PowerApps.PackageDeployerTemplate.MockPackage.csproj
@@ -36,12 +36,13 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.8" />
+    <ProjectReference Include="..\..\src\Capgemini.PowerApps.PackageDeployerTemplate\Capgemini.PowerApps.PackageDeployerTemplate.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\Capgemini.PowerApps.PackageDeployerTemplate\Capgemini.PowerApps.PackageDeployerTemplate.csproj" />
-    <ProjectReference Include="..\pdt_PackageDeployerTemplate_MockSolution\pdt_PackageDeployerTemplate_MockSolution.cdsproj" ReferenceOutputAssembly="false">
-      <Properties>SolutionPackageZipFilePath=$(TargetDir)pdt_PackageDeployerTemplate_MockSolution.zip</Properties>
-    </ProjectReference>
+    <SolutionProjectsToBuild Include="..\pdt_PackageDeployerTemplate_MockSolution\pdt_PackageDeployerTemplate_MockSolution.cdsproj" Visible="false" />
   </ItemGroup>
+  <Target Name="PackSolutions" AfterTargets="Build">
+    <!-- Using Exec as the MSBuild task fails. -->
+    <Exec Command="dotnet build %(SolutionProjectsToBuild.FullPath) -o $(TargetDir)\PkgFolder\" />
+  </Target>
 </Project>
