move timeout into App.config and add more messages

--- a/tests/Capgemini.PowerApps.PackageDeployerTemplate.IntegrationTests/App.config
+++ b/tests/Capgemini.PowerApps.PackageDeployerTemplate.IntegrationTests/App.config
@@ -2,5 +2,6 @@
 <configuration>
   <appSettings>
     <add key="xunit.diagnosticMessages" value="true"/>
+    <add key="MaxCrmConnectionTimeOutMinutes" value="5"/>
   </appSettings>
 </configuration>
