--- a/azure-pipelines-pull-request.yml
+++ b/azure-pipelines-pull-request.yml
@@ -1,11 +1,94 @@
 name: $(GITVERSION_FullSemVer)
+
 trigger: none
+
 pr:
   - master
+
 pool:
-  vmImage: 'windows-latest'
+  vmImage: windows-latest
+
+variables:
+  - name: TestEnvironment.DomainName
+    value: packagedeployertemplate-pr-$(System.PullRequest.PullRequestNumber)
+  - group: Dataverse users
+
 stages:
+  - stage: ProvisionEnvironment
+    displayName: Provision environment
+    jobs:
+      - job: ProvisionEnvironmentJob
+        displayName: Provision environment
+        steps:
+          - task: PowerPlatformToolInstaller@0
+            displayName: Install Power Platform Build Tools
+            inputs:
+              DefaultVersion: true
+          - task: PowerPlatformCreateEnvironment@0
+            inputs:
+              authenticationType: PowerPlatformSPN
+              PowerPlatformSPN: Dataverse (placeholder)
+              DisplayName: Package Deployer Template - PR $(System.PullRequest.PullRequestNumber)
+              EnvironmentSku: Sandbox
+              LocationName: unitedkingdom
+              LanguageName: 1033
+              CurrencyName: GBP
+              DomainName: $(TestEnvironment.DomainName)
+          - powershell: echo "##vso[task.setvariable variable=EnvironmentUrl;isOutput=true]$env:BUILDTOOLS_ENVIRONMENTURL"
+            displayName: Set environment URL output variable
+            name: SetEnvironmentUrl
   - stage: BuildAndTest
     displayName: Build and Test
+    dependsOn: ProvisionEnvironment
+    variables:
+      BuildTools.EnvironmentUrl: $[ stageDependencies.ProvisionEnvironment.ProvisionEnvironmentJob.outputs['SetEnvironmentUrl.EnvironmentUrl'] ]
     jobs:
-    - template: templates/build-and-test-job.yml
+      - template: templates/build-and-test-job.yml
+        parameters:
+          environmentUrl: $(BuildTools.EnvironmentUrl)
+          username: $(DataverseUsers.AzureDevOps.Username)
+          password: $(DataverseUsers.AzureDevOps.Password)
+  - stage: ManualValidation
+    displayName: Manual validation
+    dependsOn:
+      - ProvisionEnvironment
+      - BuildAndTest
+    condition: succeededOrFailed()
+    variables:
+      BuildTools.EnvironmentUrl: $[ stageDependencies.ProvisionEnvironment.ProvisionEnvironmentJob.outputs['SetEnvironmentUrl.EnvironmentUrl'] ]
+    jobs:
+      - job: ManualValidationJob
+        displayName: Manual validation
+        pool: server
+        timeoutInMinutes: 8640
+        steps:
+          - task: ManualValidation@0
+            displayName: Wait for manual validation
+            timeoutInMinutes: 7200
+            inputs:
+              onTimeout: resume
+              instructions: Please perform any checks required on $(BuildTools.EnvironmentUrl).
+  - stage: DeleteEnvironment
+    displayName: Delete environment
+    dependsOn:
+      - ProvisionEnvironment
+      - ManualValidation
+    condition: succeededOrFailed()
+    variables:
+      BuildTools.EnvironmentUrl: $[ stageDependencies.ProvisionEnvironment.ProvisionEnvironmentJob.outputs['SetEnvironmentUrl.EnvironmentUrl'] ]
+    jobs:
+      - job: DeleteEnvironmentJob
+        displayName: Delete environment
+        condition: and(succeeded(), ne(variables['BuildTools.EnvironmentUrl'], ''))
+        steps:
+          - checkout: none
+          - task: PowerPlatformToolInstaller@0
+            displayName: Install Power Platform Build Tools
+            inputs:
+              DefaultVersion: true
+          - task: PowerPlatformDeleteEnvironment@0
+            displayName: Delete environment
+            continueOnError: true
+            inputs:
+              authenticationType: PowerPlatformSPN
+              PowerPlatformSPN: Dataverse (placeholder)
