ci: add display name for create environment step

--- a/azure-pipelines-pull-request.yml
+++ b/azure-pipelines-pull-request.yml
@@ -25,6 +25,7 @@ stages:
             inputs:
               DefaultVersion: true
           - task: PowerPlatformCreateEnvironment@0
+            displayName: Create environment
             inputs:
               authenticationType: PowerPlatformSPN
               PowerPlatformSPN: Dataverse (placeholder)
