ci: correct environment display name

--- a/azure-pipelines-pull-request.yml
+++ b/azure-pipelines-pull-request.yml
@@ -31,7 +31,7 @@ stages:
             inputs:
               authenticationType: PowerPlatformSPN
               PowerPlatformSPN: Dataverse (placeholder)
-              DisplayName: Package Deployer Template - PR $(System.PullRequest.PullRequestNumber)
+              DisplayName: Package Deployer Template - PR $(Environment.Identifier)
               EnvironmentSku: Sandbox
               LocationName: unitedkingdom
               LanguageName: 1033
