ci: fix display name variable not used

--- a/templates/build-and-test-stages.yml
+++ b/templates/build-and-test-stages.yml
@@ -33,7 +33,7 @@ stages:
             inputs:
               authenticationType: PowerPlatformSPN
               PowerPlatformSPN: Dataverse (placeholder)
-              DisplayName: Package Deployer Template - PR $(Environment.Identifier)
+              DisplayName: $(Environment.DisplayName)
               EnvironmentSku: Sandbox
               LocationName: unitedkingdom
               LanguageName: 1033
